2005-03-05  Nathaniel Smith  <njs@codesourcery.com>

	* revision.cc (check_sane_history): Typo.
	
2005-03-05  Nathaniel Smith  <njs@codesourcery.com>

	* revision.hh (check_sane_history): Take an app_state instead of a
	database as an argument.
	* database.cc: Pass an app_state instead of a database as its
	argument. 
	* revision.cc (check_sane_history): Update accordingly.  Add a new
	check for merges, that they are creating consistent changesets
	(even when the common ancestor is outside of the usual
	paranoia-checking search depth).

2005-03-05  Nathaniel Smith  <njs@codesourcery.com>

	* revision.cc (kluge_for_3_ancestor_nodes): Rename to...
	(kill_redundant_edges): ...this.  Kill all redundant edges, not
	just ones on nodes with 3+ parents.  Also, make it actually work.
	
2005-03-05  Nathaniel Smith  <njs@codesourcery.com>

	* revision.cc (kluge_for_3_ancestor_nodes): New method.
	(rebuild_ancestry): Call it.

2005-03-03  Nathaniel Smith  <njs@codesourcery.com>

	* revision.cc (check_sane_history): Print a warning to let the
	user know why things like 'pull' can take so long.
	* netsync.cc: Remove a few tabs.

2005-03-04  Jon Bright  <jon@siliconcircus.com>
	* win32/process.cc (process_spawn): Now takes 
	const char * const argv[]
	* unix/process.cc (process_spawn): Ditto.  Cast for call to
	execvp
	(existsonpath): Initialise args in a const way

2005-03-04  Jon Bright  <jon@siliconcircus.com>
	* win32/process.cc (process_spawn): Now takes 
	char * const argv[]
	* platform.hh (process_spawn): Ditto
	* unix/process.cc (process_spawn): Ditto
	* lua.cc (monotone_spawn_for_lua): Remove debug code
	* General: Beginning to hate C++'s const rules

2005-03-04  Jon Bright  <jon@siliconcircus.com>
	* win32/process.cc (process_spawn): Now takes 
	const char * const *
	* platform.hh (process_spawn): Ditto
	* unix/process.cc (process_spawn): Ditto
	* General: Sorry about all these commits, I'm syncing back and
	forth between Linux and Win32
